--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.9.4",
+    "react-simple-typewriter": "^5.0.1",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
   },
