--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.9.4",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
   },
