--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "aos": "^2.3.4",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.9.4",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
